fix gallery on mobile

--- a/components/products/ProductsGallery.module.scss
+++ b/components/products/ProductsGallery.module.scss
@@ -6,7 +6,6 @@
   // height: 100%;
   background-color: $color-background-secondary;
   margin: auto;
-  padding: 0.5rem;
   border-radius: 8px;
   padding: 1rem;
 }
